--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,21 +15,37 @@ jobs:
       # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for all branches
 
-      # Step 2: Generate the snake animation
+      # Step 2: Create dist directory if it doesn't exist
+      - name: Create dist directory
+        run: mkdir -p dist
+
+      # Step 3: Generate the snake animation
       - name: Generate snake animation
-        uses: Platane/snk@v3
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: danieleschmidt
           outputs: |
             dist/snake.svg
-            dist/snake-dark.svg?palette=github-dark
+            dist/snake-dark.svg
 
-      # Step 3: Push the generated files
+      # Step 4: Check if files were created (for debugging)
+      - name: Check generated files
+        run: |
+          echo "Checking dist directory:"
+          ls -la dist/
+          echo "File sizes:"
+          du -h dist/*
+
+      # Step 5: Push the generated files
       - name: Push to GitHub
         uses: EndBug/add-and-commit@v9
         with:
           message: "chore: update contribution snake"
-          add: "dist/*.svg"
+          add: "dist/*"
           default_author: github_actions
           push: true
+          committer_name: github-actions[bot]
+          committer_email: 41898282+github-actions[bot]@users.noreply.github.com
